lots of new features, its still too early to list them all but here we are

--- a/index.html
+++ b/index.html
@@ -8,29 +8,54 @@
 </head>
 <body>
     <header>
-        <h1>The Quizzler</h1>
-        <div><a href="pages/stats.html" class="stats-link">Stats</a><a>Quizzes</a></div>
+        <nav>
+            <a class="home-link"><h1>The Quizzler</h1></a>
+            <div><a href="pages/stats.html" class="stats-link center-link">Stats</a></div>
+        </nav>   
     </header>
-    <h1 class="topic-title title-1">Most Popular</h1>
-    <div class="container">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+<main>
+        
+    <div class="quiz-select-container">
+        <div class="quiz-option">
+            <h1 class="quiz-name">Test Quiz</h1>
+            <p class="quiz-description">An infinite quiz to test the features and to get ready for when I add the rest. <br> <br> </p>
+            <div class="quiz-features-block">
+                <p class="quiz-features">Features <br> <br>
+                    ~ 30s Time limit per question<br><br>
+                    ~ +100 Score for each correct answer<br><br>
+                    ~ Completely random subject matters<br><br>
+                    ~ Lots of neat and unique animations<br><br>
+
+                </p>
+            </div>
+            <a class="quiz-link" href="./pages/random-quiz.html">Select Quiz</a>
+        </div>
     </div>
-    <h1 class="topic-title">Topics</h1>
-    <div class="container">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+
+    <div class="quiz-select-container">
+        <div class="quiz-option">
+            <h1 class="quiz-name">Personality Test</h1>
+            <p class="quiz-description">
+                    Embark on a journey of self-discovery,
+                    uncovering the intricacies that make you,
+                    you. Our personality test is designed to
+                   be an enlightening experience, providing 
+                   valuable insights that can empower personal 
+                   and interpersonal growth.
+                 <br> </p>
+            <div class="quiz-features-block">
+                <p class="quiz-features">Key Features: <br> <br>
+                    1:  Explores a nuanced and enlightening understanding of who you are <br> <br>
+                    2:  A test best accepted and most commonly used in academic psychology          <br> <br>
+                    3:  A user friendly and fun interface <br> <br>
+                    4:  A dynamic and complex scoring system for accurate results           <br> <br>
+                    5:  Provides personalized feedback                    <br> <br>
+                </p>
+            </div>
+            <a class="quiz-link" href="./pages/IPIP-personality-test.html">Select Quiz</a>
+        </div>
     </div>
-    <h1 class="topic-title">search</h1>
-    <div class="container">
-        <a href ="./pages/random-quiz.html"><img  id="random" src="./images/random-card.png" alt="random Quiz"></a>
-        <a href ="./pages/random-quiz.html"><img  id="random" src="./images/random-card.png" alt="random Quiz"></a>
-        <a href ="./pages/random-quiz.html"><img  id="random" src="./images/random-card.png" alt="random Quiz"></a>
-        <a href ="./pages/random-quiz.html"><img  id="random" src="./images/random-card.png" alt="random Quiz"></a>
-    </div>
+
+</main>
 </body>
 </html>
