--- a/pages/random-quiz.html
+++ b/pages/random-quiz.html
@@ -1,47 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="../index.css" rel="stylesheet"/>
-    <link href="./quiz.css" rel="stylesheet" />
+    <link href="../styles/quiz.css" rel="stylesheet"/>
+    <link href="../index.css" rel="stylesheet" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz app</title>
 </head>
 <body>
     <header>
+    <nav>
         <a class="home-link" href="../index.html"><h1>The Quizzler</h1></a>
-        <div><a href="pages/stats.html" class="stats-link">Stats</a><a>Quizzes</a></div>
+        <div><a href="stats.html" class="stats-link center-link">Stats</a></div>
+    </nav>   
     </header>
-    <h1 class="title">Random</h1>
+<div class="wrapper">
+    <div class="title-container">
+        <h1 class="title">Catagory - Random</h1> 
+        <div class="timer" id="timer">30s/ Q</div>
+    </div>          
 <div class="container">
-    <div class="quiz-environment">
-        <h1 class="question" id="question">Quiz question</h1>
-        <div class="answer-container">
-            <button id="clickA">A.</button>
-            <h2 id="A">answer</h2>
-        </div>
-        <div class="answer-container">
-            <button id="clickB">B.</button>
-            <h2 id="B">answer</h2>
-        </div>
-        <div class="answer-container">
-            <button id="clickC">C.</button>
-            <h2 id="C">answer</h2>
-        </div>
-        <div class="answer-container">
-            <button id="clickD">D.</button>
-            <h2 id="D">answer</h2>
-        </div>
+    <div id="color-div" class="quiz-environment safe-color">
 
-    </div>
-    <div class="results-area">
-        <button id="previos-button" class="next-button"> <= Previos question </button>
-            <h3 id="score">Score : 0</h3>
-            <h3 id="answer">Answer :</h3>
-            <h3 id="result">Result :</h3>
-        <button id="next-button" class="next-button">Next question =></button>
+        
     </div>
 </div>
-<script src="../index.js" type="module"></script>
+</div>
+<div>
+    
+</div>
+<script src="../modules/index.js" type="module"></script>
 </body>
 </html>
