--- a/pages/stats.html
+++ b/pages/stats.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="index.css" rel="stylesheet"/>
+    <link href="../index.css" rel="stylesheet"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz app</title>
 </head>
 <body>
     <header>
-        <h1>The Quizzler</h1>
-        <div><button>Stats</button> <button>Quizzes</button></div>
+        <nav>
+            <a class="home-link" href="../index.html"><h1>The Quizzler</h1></a>
+            <div><a class="stats-link center-link">Stats</a></div>
+        </nav>   
     </header>
+    <main>
+        Stats go here
+    </main>
     
 </body>
 </html>
