too much to mention has been changed, over 1k changes as this is the initial build of the project

--- a/pages/random-quiz.html
+++ b/pages/random-quiz.html
@@ -29,6 +29,6 @@
 <div>
     
 </div>
-<script src="../modules/index.js" type="module"></script>
+<script src="../modules/quiz-start-screen.js" type="module"></script>
 </body>
 </html>
